css/style.css
body {
    background-color: #19181b;
    color: #f8f6ea;
    margin: 20px auto;
    max-width: 60%;
}

html {
    scroll-behavior: smooth;
}

.header {
    display: flex;
    width: fit-content;
    flex-direction: row;
    margin: 20px auto;
    gap: 20px;
}

.header img {
    width: 108px;
    height: 108px;
}

.titletext {
    position: relative;
    width: fit-content;
    margin: auto;
}

.titletext h1 {
    margin: auto;
    width: fit-content;
    font-size: 60px;
    color: #2897FF;
}

.titletext small {
    position: absolute;
    right: 25%;
    bottom: -15px;
    margin: auto;
    color: darkgray;
}

.titletext small:hover {
    cursor: pointer;
}

hr {
    overflow: visible;
    border: dashed 2px darkgray;
    margin: 30px 40px;
}

/* Triangle code adapted from
https://stackoverflow.com/questions/18816486/how-can-i-make-a-pointy-arrow-with-a-div-in-css */
hr:before,
hr:after {
    position: relative;
    bottom: 10px;
    display: inline;
    content: "";
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
}

hr:before {
    left: -10px;
    border-right: 20px solid darkgray;
    float: left;
}

hr:after {
    right: -10px;
    border-left: 20px solid darkgray;
    float: right;
}

.frontpageimg {
    background-image: url("../assets/homepage/slideshow/20231226_174108.jpg");
    /*background-size: 640px 360px;*/
    background-size: 80%;
    /*filter: blur(2px);*/
    height: 360px;
    background-repeat: no-repeat;
    background-position: center;
}

.slideshow-container {
    max-width: 100%;
    position: relative;
    margin: auto;
}

.slide {
    display: none;
}

.slide img {
    max-width: 80%;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 0 4%;
    color: darkgray;
    font-weight: bold;
    font-size: 50px;
    transition: 0.6s ease;
    user-select: none;
}

.next {
    right: 0;
}

.prev {
    left: 0;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
}

@keyframes fade {
    from {opacity: .4}
    to {opacity: 1}
}

.caption-text {
    color: #f2f2f2;
    font-size: 15px;
    padding: 8px 12px;
    position: absolute;
    bottom: 8px;
    width: 100%;
    text-align: center;
}

.buttonbox {
    margin: 40px auto;
    justify-content: center;
    display: flex;
    flex-direction: row;
    gap: 25px;
    flex-wrap: wrap;
}

.button {
    background-color: transparent;
    border-color: darkgray;
    border-style: solid;
    font-weight: bold;
    transition-duration: 0.4s;
    border-radius: 10px;
    color: darkgray;
    padding: 15px 30px;
    text-decoration: blink;
    display: inline-block;
    font-size: 30px;
}

button:hover {
    cursor: pointer;
}

.button.secret {
    opacity: 0;
    background-color: darkgray;
    border: 0;
    transition-duration: 0.4s;
    border-radius: 10px;
    padding: 10px 20px;
    display: inline-block;
    font-size: 20px;
    color: #808080
}

button.secret:hover {
    opacity: 0.7;
}


.button.youtube:hover {
    background-color: #DC143C;
}

.button.github:hover {
    background-color: #08872B;
}

.button.projects:hover {
    background-color: #CC5500;
}

.button.blog:hover {
    background-color: #00519e;
}

.button.resume:hover {
    background-color: #1E2952;
}

.footer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 10px;
}

.footer p, footer a {
    margin: 0;
}

a:visited, a:hover{
    color: #8888ff;
}

a{
    color: #66aaff;
}

*{
    text-align: center;
    font-family: 'Dubai Regular', serif;
    line-height: 1.2
}

.strip {
    display: flex;
    flex-direction: column;
    padding: 10px;
    margin: 40px 0;
    border-style: solid;
    border-radius: 10px;
    align-items: center;
}

.orgs {
    display: flex;
    flex-direction: row;
}

.orgs img {
    max-height: 128px;
    margin: 10px;
}

.project-strip {
    display: grid;
    padding: 10px;
    margin: 40px 0;
    border-style: solid;
    border-radius: 10px;
    align-items: center;
}

.project-strip.image-right {
    grid-template-columns: 70% 30%;
}

.project-strip.image-left {
    grid-template-columns: 30% 70%;
}

.image-wrapper {
    padding: 10px;
}

.project-strip img {
    max-width: 100%;
}

.blue-shade-1 {
    background-color: #00294f;
}

.blue-shade-2 {
    background-color: #003d76;
}

@font-face {
    font-family: 'Dubai Regular';
    font-style: normal;
    font-weight: normal;
    src: local('Dubai Regular'), url('Dubai-Regular.woff') format('woff');
}

/* Adapted from ChatGPT-generated code */
@media screen and (max-width: 768px) {
    body {
        max-width: 90%;

    }

    .header {
        flex-direction: column;
        align-items: center;
        gap: 10px;
    }

    .titletext h1 {
        font-size: 35px;
    }

    .titletext small {
        right: 20px;
        bottom: -15px;
        font-size: 12px;
    }

    .header img {
        width: 80px;
        height: 80px;
    }

    .frontpageimg {
        background-size: cover;
        height: 200px;
    }

    .slideshow-container {
        height: 200px;
    }

    .slide img {
        object-fit: cover;
        width: 100%;
        height: 100%;
    }

    .prev, .next {
        padding: 0 3%;
        font-size: 30px;
    }

    .buttonbox {
        gap: 15px;
    }

    .button {
        font-size: 20px;
        padding: 10px 20px;
    }

    .project-strip.image-left,
    .project-strip.image-right {
        grid-template-columns: 1fr;
    }

    .orgs {
        flex-direction: column;
    }

    hr {
        margin: 20px;
    }

    .footer {
        flex-direction: column;
        gap: 5px;
    }


}

